--- a/sass_scss/1-color_variable.scss
+++ b/sass_scss/1-color_variable.scss
@@ -1,9 +1,6 @@
 //define a vairable for the text color
 $mycolor: #3D3D3D;
 
-body {
+body, p {
   background-color: $mycolor;
-}
-p {
-  color: $mycolor;
 }
