--- a/sass_scss/7-nested_deeper.scss
+++ b/sass_scss/7-nested_deeper.scss
@@ -2,10 +2,12 @@
 
 body {
   font-size: 14px;
-}
-body h1 {
-  font-size: 16px;
-}
-body h1 .smaller {
-  font-size: 12px;
+
+  h1 {
+    font-size: 16px;
+
+    .smaller {
+      font-size: 12px;
+    }
+  }
 }
