--- a/sass_scss/7-nested_deeper.scss
+++ b/sass_scss/7-nested_deeper.scss
@@ -1,4 +1,4 @@
-//fontsize in nested declaration
+/*fontsize in nested declaration*/
 
 body {
   font-size: 14px;
@@ -8,6 +8,6 @@ body {
 
     .smaller {
       font-size: 12px;
-    }
+   }
   }
 }
