--- a/sass_scss/100-loop_col.scss
+++ b/sass_scss/100-loop_col.scss
@@ -1,4 +1,5 @@
-// Generate .col-* classes with corresponding widths
+/*Generate .col-* classes with corresponding widths*/
+
 @for $i from 1 through 4 {
   .col-#{$i} {
     width: #{100 / $i};
